fixes bug 338677 "nsUrlClassifierDBService leaks memory" patch by tony, r=darin